# zalgo.rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: all.rs  chars.rs  gen.rs  is_zalgo.rs
src/: lib.rs
tests/: lib.rs
