[package]
authors = ["Austin Hellyer <hello@austinhellyer.me>"]
description = "A crate for generating Zalgo text with defined parameters."
documentation = "http://docs.austinhellyer.me/zalgo"
homepage = "https://github.com/taiyaeix/zalgo.rs"
keywords = ["zalgo"]
license = "ISC"
name = "zalgo"
readme = "README.md"
repository = "https://github.com/taiyaeix/zalgo.rs.git"
version = "0.1.0"

[dependencies]
rand = "^0.3"

[[bin]]
name = "zalgo"
path = "bin/zalgo.rs"
